@startuml UC36_ProcessLabResult_ClassDiagram

skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam backgroundColor white
skinparam roundcorner 5
skinparam class {
    BackgroundColor #f9f9f9
    ArrowColor #336699
    BorderColor #336699
}

class LabOrderController {
    + startLabOrder(id: Long, userDetails: UserDetails): ResponseEntity<ApiResponse<LabOrderResponse>>
    + saveDraft(id: Long, request: LabResultRequest, userDetails: UserDetails): ResponseEntity<ApiResponse<LabOrderResponse>>
    + submitResult(id: Long, request: LabResultRequest, userDetails: UserDetails): ResponseEntity<ApiResponse<LabOrderResponse>>
    - resolveLabTechnicianId(userDetails: UserDetails): Long
}

interface LabOrderService {
    + startLabOrder(labOrderId: Long, labTechnicianId: Long): LabOrderResponse
    + saveDraft(labOrderId: Long, request: LabResultRequest, labTechnicianId: Long): LabOrderResponse
    + submitLabResult(labOrderId: Long, request: LabResultRequest, labTechnicianId: Long): LabOrderResponse
}

class LabOrderServiceImpl {
    + startLabOrder(labOrderId: Long, labTechnicianId: Long): LabOrderResponse
    + saveDraft(labOrderId: Long, request: LabResultRequest, labTechnicianId: Long): LabOrderResponse
    + submitLabResult(labOrderId: Long, request: LabResultRequest, labTechnicianId: Long): LabOrderResponse
}

class LabOrderRepository {
    + findById(id: Long): Optional<LabOrder>
    + save(order: LabOrder): LabOrder
}

class LabResultRepository {
    + findByLabOrderId(labOrderId: Long): Optional<LabResult>
    + save(result: LabResult): LabResult
}

class NotificationService {
    + sendNotification(message: String): void
}

class LabOrder {
    - orderId: Long
    - status: LabOrderStatus
    + setStatus(status: LabOrderStatus): void
}

class LabResult {
    - resultId: Long
    - labOrderId: Long
    - status: LabOrderStatus
    - measuredValues: String
    - attachedImages: String
    + setStatus(status: LabOrderStatus): void
}

enum LabOrderStatus {
    PENDING
    IN_PROGRESS
    SUBMITTED
    APPROVED
    REJECTED
}

class LabResultRequest {
    - measuredValues: String
    - attachedImages: List<String>
}

class LabOrderResponse {
    - orderId: Long
    - status: String
}

class ApiResponse<T> {
    - status: int
    - message: String
    - data: T
}

LabOrderController ..> LabOrderService : uses
LabOrderController ..> ApiResponse : creates
LabOrderService <|.. LabOrderServiceImpl : implements
LabOrderServiceImpl ..> LabOrderRepository : uses
LabOrderServiceImpl ..> LabResultRepository : uses
LabOrderServiceImpl ..> NotificationService : uses
LabOrderServiceImpl ..> LabResultRequest : consumes
LabOrderServiceImpl ..> LabOrderResponse : creates

LabOrderRepository ..> LabOrder : manages
LabResultRepository ..> LabResult : manages
LabOrder "1" -- "1" LabOrderStatus : uses >
LabResult "1" -- "1" LabOrderStatus : uses >

LabOrder "1" *-- "0..1" LabResult : has >

@enduml
